# SoftSys3DGraphics

./: README.md  main.cpp
3d_model_example/: Makefile  main  main.cpp  pointcloud.vert
AndroidOpenGLDemo-master/app/: build.gradle
CameraDemo_Linux/: Makefile  capture  v4l2uvc.h
MotionDetectionAR-master/: project.properties
android/eclipse/: artifacts.xml  eclipse.ini
androidLearn-master/: README.md
androidLearn-master/ARNav/: .gitignore
androidLearn-master/Camera/: .gitignore
androidLearn-master/OpenglEs01/: .gitignore
code/: main  main_gaussian_demo  main_gaussian_demo1
code/Tutorial1/: main  main.cpp  main_gaussian_demo  main_gaussian_demo.cpp
code/opencv/: ARDrawingContext.cpp  objdet.cpp
code/opencv/archive/aruco-version1/: CMakeLists.txt  arucodetection.cpp
code/opencv/archive/augmented_reality-master/MarkerlessAR_V1/src/: ARDrawingContext.cpp  CMakeLists.txt
code/opencv/aruco-version2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detect_markers  markerDetection.cpp  new.cpp
common/: ObjLoader.cpp  ObjLoader.hpp  controls.cpp  controls.hpp  controls_copy.cpp  objloader.cpp  objloader.hpp  shader.cpp  shader_copy.cpp  texture.cpp  texture.hpp  texture_copy.cpp  tinyobj_loader_c.h
mtlobjmodel/example/: Makefile  banana.mtl  example  example.cpp  eye1.tga  materials.mtl  mouth1.tga  pikachu.mtl  pikagen.tga
obj_loader_example/: Makefile  viewer.c
obj_loader_example2/: Makefile  tutorial7  tutorial7.cpp
ogl-master/playground/: playground
reports/: Update.md  aruco-setup.md  proposal.md  report.md  resources.md
(+231 files in other folders)
