cmake_minimum_required(VERSION 2.8)
project( detect_markers )
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( detect_markers detect_markers.cpp )
target_link_libraries( detect_markers ${OpenCV_LIBS} )
